# clawfeedradar

./: .gitattributes  .gitignore  CLI_HELP_SPEC.md  CLI_HELP_SPEC_MANSTYLE.md  ENV.example  README.md  README_zh.md  feeds.json  pyproject.toml  sources.json
clawfeedradar/: __init__.py  cli.py  config.py  demo.py  doctor.py  embed_client.py  llm_client.py  models.py  publish.py  runner.py  scoring.py  scrape.py  sqlite_interest.py
clawfeedradar/sources/: __init__.py  hn.py  rss.py
docs/: DESIGN.md  SPEC.md  SPEC_en.md  SPEC_zh.md  article_wechat_zh.md
feeds/: BBC_News.json  BBC_News.xml  BBC_Politics.json  BBC_Politics.xml  CBS.json  CBS.xml  Gardian.json  Gardian.xml  arxiv-cs-lg.json  arxiv-cs-lg.xml  hn-frontpage.json  hn-frontpage.test.xml  hn-frontpage.xml  radar.json  radar.xml
state/: seen_urls.json
